Fim_projeto_HTML

--- a/primeiro_projeto_html/index.html
+++ b/primeiro_projeto_html/index.html
@@ -6,9 +6,9 @@
 			</head>
 
 			<body background="imagens/fundo.png">
-				<table border = "1" width="900" align="center">
+				<table border = "0" width="900" align="center">
 					<tr>
-						<td><img src="imagens/Logo.png"></td>
+						<td height="89"><img src="imagens/Logo.png"></td>
 						<td align="right">
 							<a href="">Home</a>
 							<a href="Quem_somos.html">Quem Somos</a>
@@ -24,9 +24,9 @@
 					<td colspan = "2">
 						<h2>Sobre a Universidade</h2>
 						<p>
-							Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Sed nec venenatis massa. Curabitur mollis massa sed est bibendum, ac pharetra dui accumsan. Ut augue ante, lobortis vel libero non, sodales facilisis odio. Morbi consectetur ligula nec arcu porta, id gravida orci semper. Nulla facilisi. Vestibulum ac fringilla neque. Pellentesque at ornare arcu. Proin dignissim pretium tellus a molestie. In nisi nulla, efficitur non venenatis id, scelerisque id arcu. Fusce feugiat risus et nisi vehicula iaculis. Quisque bibendum semper efficitur. In hac habitasse platea dictumst. Duis erat sem, luctus a eleifend a, tristique nec nulla.
+							Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Sed nec venenatis massa. Curabitur mollis massa sed est bibendum, ac pharetra dui accumsan. Ut augue ante, lobortis vel libero non, sodales facilisis odio. Morbi consectetur ligula nec arcu porta, id gravida orci semper. Nulla facilisi. Vestibulum ac fringilla neque. Pellentesque at ornare arcu. Proin dignissim pretium tellus a molestie. In nisi nulla, efficitur non venenatis id, scelerisque id arcu. Fusce feugiat risus et nisi vehicula iaculis. Quisque bibendum semper efficitur. In hac habitasse platea dictumst. Duis erat sem, luctus a eleifend a, tristique nec nulla.<br><br>
 
-							Ut risus urna, hendrerit a viverra ut, rhoncus sed nunc. Mauris in tincidunt lacus, eu volutpat lorem. Aliquam viverra velit justo, sit amet dapibus metus pellentesque nec. Etiam fringilla velit nec augue tincidunt ultricies. <strong>Curabitur placerat odio quis libero maximus</strong>, eu aliquam massa pharetra. Curabitur ante sapien, tempor ac mauris eget, varius bibendum sem. Etiam sagittis odio lacus, quis viverra leo sollicitudin eget. Aenean rutrum mauris libero, in lacinia orci fringilla ut. Praesent vitae mi ut tortor fringilla convallis. Etiam tristique fermentum nulla sit amet auctor.
+							<em>Ut risus urna, hendrerit a viverra ut, rhoncus sed nunc.</em> Mauris in tincidunt lacus, eu volutpat lorem. Aliquam viverra velit justo, sit amet dapibus metus pellentesque nec. Etiam fringilla velit nec augue tincidunt ultricies. <strong>Curabitur placerat odio quis libero maximus</strong>, eu aliquam massa pharetra. Curabitur ante sapien, tempor ac mauris eget, varius bibendum sem. Etiam sagittis odio lacus, quis viverra leo sollicitudin eget. Aenean rutrum mauris libero, in lacinia orci fringilla ut. Praesent vitae mi ut tortor fringilla convallis. Etiam tristique fermentum nulla sit amet auctor.
 
 						</p>
 					</td>
